--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -243,7 +243,7 @@ knn_model_cv_10fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGri
 knn_model_cv_10fold
 ```
 
-## Choosing $k$ for k-nn classification
+## Choosing the number of neighbours for k-nn classification
 
 From 5- and 10-fold cross-validate we estimate that the prediction accuracy of our classifier to be ~ 93%. This could be not too bad of an accuracy, however what accuracy you aim for always depends on the downstream application of your analysis. Here, we are trying to predict a very important outcome, tumour cell diagnosis class. And the class label we assign to a real patient may have life or death consequences. Hence, we'd like to do better for this application than 83%. To do this we can use cross-validation in an even bigger way, we can choose a range of possible $k$'s and perform cross-validation to calculate the accuracy for each $k$, and then choose the smallest $k$ which gives us the best cross-validation accuracy. To do this, we will create a vector of values for $k$ instead of providing just 1.
 
@@ -275,7 +275,7 @@ Based off of the visualization above we typically would choose $k$ to be 3 or 5,
 
 Why do we want to keep $k$ small? Well this is because if we keep increasing $k$ our accuracy actually starts to decrease! Take a look as the plot below as we vary $k$ from 1 to almost the number of observations in the data set:
 
-```{r too much of a good thing}
+```{r fig.height = 4, fig.width = 5}
 train_control <- trainControl(method="cv", number = 10)
 k = data.frame(k = seq(from = 1, to = 499, by = 10))
 knn_model_cv_10fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGrid = k, trControl = train_control)
