--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -271,7 +271,7 @@ accuracy_vs_k
 ```
 
 
-Based off of the visualization above we typically would choose $k$ to be 3 or 5, given that at this value of $k$ our accuracy is a high as it can be with much larger values of $k$. As you can see there is no exact or perfect answer here, what we are looking for is a value for $k$ where we get a roughly optimal increase of accuracy but at the same time we want to keep $k$ small.
+Based off of the visualization above we typically would choose $k$ to be ~ 5, given that at this value of $k$ our accuracy is a high as it can be with much larger values of $k$. As you can see there is no exact or perfect answer here, what we are looking for is a value for $k$ where we get a roughly optimal increase of accuracy but at the same time we want to keep $k$ small.
 
 Why do we want to keep $k$ small? Well this is because if we keep increasing $k$ our accuracy actually starts to decrease! Take a look as the plot below as we vary $k$ from 1 to almost the number of observations in the data set:
 
