added reading on scaling

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -356,10 +356,5 @@ We can generalize for n-dimensions by
 
 
 
-Data source:
-W.N. Street, W.H. Wolberg and O.L. Mangasarian 
-	Nuclear feature extraction for breast tumor diagnosis.
-	IS&T/SPIE 1993 International Symposium on Electronic Imaging: Science
-	and Technology, volume 1905, pages 861-870, San Jose, CA, 1993.
-	
-
+## Additional readings/resources
+- [The `caret` Package](https://topepo.github.io/caret/index.html)
