fixing figure problem

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -277,13 +277,13 @@ Why do we want to keep $k$ small? Well this is because if we keep increasing $k$
 
 ```{r fig.height = 4, fig.width = 5}
 train_control <- trainControl(method="cv", number = 10)
-k = data.frame(k = seq(from = 1, to = 499, by = 10))
-knn_model_cv_10fold <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGrid = k, trControl = train_control)
-accuracies <- knn_model_cv_10fold$results
-accuracy_vs_k <- ggplot(accuracies, aes(x = k, y = Accuracy)) +
+k_lots = data.frame(k = seq(from = 1, to = 499, by = 10))
+knn_model_cv_10fold_lots <- train(x = X_cancer, y = Y_cancer, method = "knn", tuneGrid = k_lots, trControl = train_control)
+accuracies_lots <- knn_model_cv_10fold_lots$results
+accuracy_vs_k_lots <- ggplot(accuracies_lots, aes(x = k, y = Accuracy)) +
   geom_point() +
   geom_line()
-accuracy_vs_k
+accuracy_vs_k_lots
 ```
 
 
